--- a/src/components/Clients.css
+++ b/src/components/Clients.css
@@ -1,5 +1,7 @@
 /* OUTER WRAPPER */
 .clients-wrapper {
+  max-width: 1320px;   /* professional content width */
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   /* padding: 30px 0; */
@@ -7,6 +9,7 @@
   background: #EFF6FF; 
   padding: 50px 40px;
   margin-top: 40px;
+  
 }
 
 /* MAIN BOX */
