--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,5 +1,5 @@
 .hero-only-image {
-  /* width: 1400px; */
+  width: 1400px;
   height: 544.17px;
   margin: 0 auto;
 
